--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tus-js-client": "^4.2.3",
+    "typescript": "~5.3.3",
+    "@types/react": "~18.2.79",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
