--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tus-js-client": "^4.2.3",
     "typescript": "~5.3.3",
     "@types/react": "~18.2.79",
-    "@expo/metro-runtime": "~3.2.3"
+    "@expo/metro-runtime": "~3.2.3",
+    "expo-document-picker": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
